--- a/app/src/main/res/layout/activtiy_signup_page.xml
+++ b/app/src/main/res/layout/activtiy_signup_page.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="#FFFFB4"
+    android:background="#282828"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -28,7 +28,7 @@
                     android:layout_marginRight="10dp"
                     android:text="學號"
                     android:textSize="25dp"
-                    android:textColor="#143C8C"/>
+                    android:textColor="#ffffff"/>
 
                 <EditText
                     android:id="@+id/edtSignUpStudentID"
@@ -36,8 +36,9 @@
                     android:layout_height="wrap_content"
                     android:maxLines="1"
                     android:singleLine="true"
+                    android:textColor="#ffffff"
                     android:textSize="25dp"
-                    android:background="#FBB03B"
+                    android:background="@drawable/btn_shape"
                     android:maxLength="8"/>
 
             </LinearLayout>
@@ -55,14 +56,15 @@
                     android:layout_marginBottom="5dp"
                     android:text="密碼"
                     android:textSize="25dp"
-                    android:textColor="#143C8C"/>
+                    android:textColor="#ffffff"/>
 
                 <EditText
                     android:id="@+id/edtSignUpPW"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="25dp"
-                    android:background="#FBB03B"
+                    android:textColor="#ffffff"
+                    android:background="@drawable/btn_shape"
                     android:inputType="textPassword"
                     android:maxLines="1"
                     android:singleLine="true"
@@ -82,15 +84,16 @@
                     android:layout_marginRight="10dp"
                     android:text="確認密碼"
                     android:textSize="25dp"
-                    android:textColor="#143C8C"/>
+                    android:textColor="#ffffff"/>
 
                 <EditText
                     android:id="@+id/edtSignUpCKPW"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
+                    android:textColor="#ffffff"
                     android:textSize="25dp"
-                    android:background="#FBB03B"
+                    android:background="@drawable/btn_shape"
                     android:maxLines="1"
                     android:singleLine="true"
                     android:maxLength="14" />
@@ -109,14 +112,15 @@
                     android:text="姓名"
                     android:textSize="25dp"
                     android:layout_marginBottom="5dp"
-                    android:textColor="#143C8C"/>
+                    android:textColor="#ffffff"/>
 
                 <EditText
                     android:id="@+id/edtSignUpName"
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
+                    android:textColor="#ffffff"
                     android:textSize="25dp"
-                    android:background="#FBB03B"
+                    android:background="@drawable/btn_shape"
                     android:maxLines="1"
                     android:singleLine="true"
                     android:maxLength="10" />
@@ -131,7 +135,7 @@
                         android:id="@+id/rdbtnSignUpMan"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="#143C8C"
+                        android:textColor="#ffffff"
                         android:text="男"
                         android:textSize="20dp"/>
 
@@ -139,7 +143,7 @@
                         android:id="@+id/rdbtnSignUpWoman"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="#143C8C"
+                        android:textColor="#ffffff"
                         android:text="女"
                         android:textSize="20dp"/>
                 </RadioGroup>
@@ -159,14 +163,13 @@
                     android:layout_marginBottom="5dp"
                     android:text="系別"
                     android:textSize="25dp"
-                    android:textColor="#143C8C"/>
+                    android:textColor="#ffffff"/>
 
                 <Spinner
                     android:id="@+id/spnSignUpDepartment"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:popupBackground="#FBB03B"
-                    android:background="#FBB03B"/>
+                    android:background="@drawable/btn_shape" />
 
             </LinearLayout>
 
@@ -183,16 +186,17 @@
                     android:layout_marginRight="10dp"
                     android:text="班級"
                     android:textSize="25dp"
-                    android:textColor="#143C8C"/>
+                    android:textColor="#ffffff"/>
 
                 <EditText
                     android:id="@+id/edtSignUpClass"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="25dp"
-                    android:background="#FBB03B"
+                    android:background="@drawable/btn_shape"
                     android:maxLines="1"
                     android:singleLine="true"
+                    android:textColor="#ffffff"
                     android:maxLength="6" />
             </LinearLayout>
 
@@ -210,14 +214,14 @@
                     android:layout_gravity="center_vertical"
                     android:text="身份"
                     android:textSize="25dp"
-                    android:textColor="#143C8C"/>
+                    android:textColor="#ffffff"/>
 
                 <Spinner
                     android:id="@+id/spnSignUpStatue"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:popupBackground="#FBB03B"
-                    android:background="#FBB03B"/>
+                    android:background="@drawable/btn_shape"
+                    android:textColor="#ffffff"/>
 
             </LinearLayout>
 
@@ -233,16 +237,17 @@
                     android:layout_marginRight="10dp"
                     android:text="信箱"
                     android:textSize="25dp"
-                    android:textColor="#143C8C"/>
+                    android:textColor="#ffffff"/>
 
                 <EditText
                     android:id="@+id/edtSignUpStudentEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="25dp"
-                    android:background="#FBB03B"
+                    android:background="@drawable/btn_shape"
                     android:maxLines="1"
                     android:singleLine="true"
+                    android:textColor="#ffffff"
                     android:inputType="textEmailAddress"/>
             </LinearLayout>
 
@@ -257,11 +262,11 @@
 
                     <Button
                         android:id="@+id/btnSingUpClear"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
                         android:background="@drawable/btnrefill"
                         android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="30dp" />
+                        android:layout_marginTop="20dp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -272,10 +277,10 @@
 
                     <Button
                         android:id="@+id/btnSignUpOK"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
                         android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="30dp"
+                        android:layout_marginTop="20dp"
                         android:background="@drawable/btnconfirm"/>
                 </LinearLayout>
             </LinearLayout>
