--- a/app/src/main/res/drawable/btn_shape.xml
+++ b/app/src/main/res/drawable/btn_shape.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
       android:shape="rectangle">
-      <solid android:color="#FBB03B"/>
+      <solid android:color="#5D5D5D"/>
       <corners
-          android:topLeftRadius="20dip"
-          android:topRightRadius="20dip"
-          android:bottomLeftRadius="20dip"
-          android:bottomRightRadius="20dip"/>
+        android:radius="10dp"
+        />
    </shape>
