--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/HomePage"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#282828"
     tools:context="com.example.nqc_app.HomePage">
 
    <ImageView
-       android:id="@+id/imgHomePage"
-       android:src="@drawable/homepage"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:scaleType="fitXY"
-       android:focusable="false"/>
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_gravity="center"
+       android:focusable="false"
+       android:layout_margin="90dp"
+       android:src="@drawable/rollcall"/>
 
-</RelativeLayout>
+   <ImageView
+       android:layout_margin="10dp"
+       android:layout_width="200dp"
+       android:layout_height="160dp"
+       android:focusable="false"
+       android:layout_gravity="center"
+       android:background="@drawable/pressscreen"/>
+</LinearLayout>
