--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp"
-    android:background="#FFFFB4">
+    android:background="#282828">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -25,7 +25,7 @@
                 android:layout_marginTop="30dp"
                 android:text="學號 Student ID："
                 android:textSize="30dp"
-                android:textColor="#143C8C"/>
+                android:textColor="#ffffff"/>
 
             <EditText
                 android:id="@+id/edtLoginStudentID"
@@ -36,7 +36,7 @@
                 android:hint="StudentID"
                 android:gravity="center"
                 android:textSize="20dp"
-                android:background="#FBB03B"
+                android:background="@drawable/btn_shape"
                 android:maxLines="1"
                 android:singleLine="true"
                 android:ems="10"/>
@@ -50,32 +50,40 @@
                 android:layout_marginTop="10dp"
                 android:text="密碼 Password："
                 android:textSize="30dp"
-                android:textColor="#143C8C"/>
+                android:textColor="#ffffff"/>
 
-            <EditText
-                android:id="@+id/edtLoginPW"
-                android:layout_width="200dp"
-                android:layout_height="40dp"
-                android:textSize="20dp"
-                android:layout_marginBottom="30dp"
-                android:layout_gravity="center_horizontal"
-                android:gravity="center"
-                android:inputType="textPassword"
-                android:background="#FBB03B"
-                android:hint="Password"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:ems="10" />
-
-            <TextView
-                android:id="@+id/txtForgetPassword"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:textSize="30dp"
-                android:text="*forget password*"
-                android:textColor="#C1272D" />
+                android:layout_gravity="center"
+                android:layout_weight="10">
+                <EditText
+                    android:id="@+id/edtLoginPW"
+                    android:layout_width="200dp"
+                    android:layout_height="40dp"
+                    android:textSize="20dp"
+                    android:layout_marginBottom="30dp"
+                    android:layout_marginLeft="70dp"
+                    android:layout_gravity="center_horizontal"
+                    android:gravity="center"
+                    android:inputType="textPassword"
+                    android:background="@drawable/btn_shape"
+                    android:hint="Password"
+                    android:maxLines="1"
+                    android:layout_weight="9"
+                    android:singleLine="true"
+                    android:ems="10" />
 
+                <TextView
+                    android:background="@drawable/question"
+                    android:clickable="true"
+                    android:id="@+id/txtForgetPassword"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_weight="1"/>
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -90,13 +98,12 @@
 
                     <Button
                         android:id="@+id/btnLoginClear"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
                         android:background="@drawable/btnrefill"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="30dp" />
                 </LinearLayout>
-
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -106,15 +113,13 @@
 
                     <Button
                         android:id="@+id/btnLoginOK"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="30dp"
                         android:background="@drawable/btnconfirm"/>
-
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
-
 </LinearLayout>
