--- a/app/src/main/res/layout/activity_editmydata_page.xml
+++ b/app/src/main/res/layout/activity_editmydata_page.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="#FFFFB4"
+    android:background="#282828"
     android:padding="15dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -22,7 +22,7 @@
                 android:layout_marginBottom="10dp"
                 android:text="學號"
                 android:textSize="25dp"
-                android:textColor="#143C8C"/>
+                android:textColor="#ffffff"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -36,7 +36,7 @@
                     android:text="密碼"
                     android:textSize="25dp"
                     android:layout_marginRight="5dp"
-                    android:textColor="#143C8C"/>
+                    android:textColor="#ffffff"/>
 
                 <Button
                     android:id="@+id/btnEditMyDataPW"
@@ -44,6 +44,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="20dp"
+                    android:textColor="#ffffff"
                     android:background="@drawable/btn_shape"
                     android:text="修改密碼"
                     android:textSize="25dp"/>
@@ -63,14 +64,15 @@
                     android:text="姓名"
                     android:textSize="25dp"
                     android:layout_marginBottom="5dp"
-                    android:textColor="#143C8C"/>
+                    android:textColor="#ffffff"/>
 
                 <EditText
                     android:id="@+id/edtEditMyDataName"
                     android:layout_width="170dp"
                     android:layout_height="wrap_content"
                     android:textSize="25dp"
-                    android:background="#FBB03B"
+                    android:textColor="#ffffff"
+                    android:background="@drawable/btn_shape"
                     android:maxLines="1"
                     android:singleLine="true"
                     android:maxLength="10" />
@@ -85,7 +87,7 @@
                         android:id="@+id/rdbtnEditMyDataMan"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="#143C8C"
+                        android:textColor="#ffffff"
                         android:text="男"
                         android:textSize="20dp"/>
 
@@ -93,7 +95,7 @@
                         android:id="@+id/rdbtnEditMyDataWoman"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="#143C8C"
+                        android:textColor="#ffffff"
                         android:text="女"
                         android:textSize="20dp"/>
                 </RadioGroup>
@@ -112,14 +114,14 @@
                     android:layout_gravity="center_vertical"
                     android:text="系別"
                     android:textSize="25dp"
-                    android:textColor="#143C8C"/>
+                    android:textColor="#ffffff"/>
 
                 <Spinner
                     android:id="@+id/spnEditMyDataDepartment"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:popupBackground="#FBB03B"
-                    android:background="#FBB03B"/>
+                    android:popupBackground="#5D5D5D"
+                    android:background="@drawable/btn_shape"/>
 
             </LinearLayout>
 
@@ -136,14 +138,15 @@
                     android:layout_marginRight="5dp"
                     android:text="班級"
                     android:textSize="25dp"
-                    android:textColor="#143C8C"/>
+                    android:textColor="#ffffff"/>
 
                 <EditText
                     android:id="@+id/edtEditMyDataClass"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="#ffffff"
                     android:textSize="25dp"
-                    android:background="#FBB03B"
+                    android:background="@drawable/btn_shape"
                     android:maxLines="1"
                     android:singleLine="true"
                     android:maxLength="6" />
@@ -162,14 +165,14 @@
                     android:layout_gravity="center_vertical"
                     android:text="身份"
                     android:textSize="25dp"
-                    android:textColor="#143C8C"/>
+                    android:textColor="#ffffff"/>
 
                 <Spinner
                     android:id="@+id/spnEditMyDataStatue"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:popupBackground="#FBB03B"
-                    android:background="#FBB03B"/>
+                    android:popupBackground="#5D5D5D"
+                    android:background="@drawable/btn_shape"/>
 
             </LinearLayout>
 
@@ -185,14 +188,15 @@
                     android:layout_marginRight="5dp"
                     android:text="信箱"
                     android:textSize="25dp"
-                    android:textColor="#143C8C"/>
+                    android:textColor="#ffffff"/>
 
                 <EditText
                     android:id="@+id/edtEditMyDataStudentEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="25dp"
-                    android:background="#FBB03B"
+                    android:background="@drawable/btn_shape"
+                    android:textColor="#ffffff"
                     android:maxLines="1"
                     android:singleLine="true"
                     android:inputType="textEmailAddress"/>
@@ -209,11 +213,11 @@
 
                     <Button
                         android:id="@+id/btnEditMyDataCancel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
                         android:background="@drawable/btnrefill"
                         android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="30dp" />
+                        android:layout_marginTop="25dp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -224,10 +228,10 @@
 
                     <Button
                         android:id="@+id/btnEditMyDataOK"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
                         android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="30dp"
+                        android:layout_marginTop="25dp"
                         android:background="@drawable/btnconfirm"/>
                 </LinearLayout>
             </LinearLayout>
