--- a/app/src/main/res/layout/activity_nfc_clockfunction_page.xml
+++ b/app/src/main/res/layout/activity_nfc_clockfunction_page.xml
@@ -6,192 +6,203 @@
     android:layout_height="match_parent"
     android:padding="10dp">
 
-    <TextView
-        android:id="@+id/txtNFCStudentID"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="學號"
-        android:layout_marginBottom="10dp"
-        android:textSize="25dp"
-        android:textColor="#FFFFFF"/>
+        android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/txtNFCStudentName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:text="姓名"
-            android:textSize="25dp"
-            android:textColor="#FFFFFF"/>
+            <TextView
+                android:id="@+id/txtNFCStudentID"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="學號"
+                android:layout_marginBottom="10dp"
+                android:textSize="25dp"
+                android:textColor="#FFFFFF"/>
 
-        <RadioGroup
-            android:id="@+id/rdgroupNFCCheck"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <RadioButton
-                android:id="@+id/rdbtnNFCCheckIn"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#FFFFFF"
-                android:checked="true"
-                android:text="簽到"
-                android:textSize="20dp"/>
+                android:orientation="horizontal">
 
-            <RadioButton
-                android:id="@+id/rdbtnNFCCheckOut"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#FFFFFF"
-                android:text="簽退"
-                android:textSize="20dp"/>
-        </RadioGroup>
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/txtNFCStudentName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:text="姓名"
+                    android:textSize="25dp"
+                    android:textColor="#FFFFFF"/>
+
+                <RadioGroup
+                    android:id="@+id/rdgroupNFCCheck"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <RadioButton
+                        android:id="@+id/rdbtnNFCCheckIn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#FFFFFF"
+                        android:checked="true"
+                        android:text="簽到"
+                        android:textSize="20dp"/>
+
+                    <RadioButton
+                        android:id="@+id/rdbtnNFCCheckOut"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#FFFFFF"
+                        android:text="簽退"
+                        android:textSize="20dp"/>
+                </RadioGroup>
+            </LinearLayout>
 
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginBottom="10dp">
-
-        <TextView
-            android:text="課程清單："
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:textSize="25dp"
-            android:textColor="#FFFFFF"/>
+            android:layout_marginBottom="10dp">
 
-        <Button
-            android:id="@+id/btnGetClassList"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_gravity="center_horizontal"
-            android:text="取得課堂資訊"
-            android:textSize="20dp"
-            android:textColor="#FFFFFF"
-            android:background="@drawable/btn_shape2"/>
-
-    </LinearLayout>
-    <TextView
-        android:id="@+id/txtNFCClassName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="課程名稱："
-        android:layout_marginBottom="10dp"
-        android:textSize="25dp"
-        android:textColor="#FFFFFF"/>
-
-    <TextView
-        android:id="@+id/txtNFCClassRoom"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="上課地點："
-        android:layout_marginBottom="10dp"
-        android:textSize="25dp"
-        android:textColor="#FFFFFF"/>
-
-    <TextView
-        android:id="@+id/txtNFCClassTime"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="上課時間："
-        android:layout_marginBottom="10dp"
-        android:textSize="25dp"
-        android:textColor="#FFFFFF"/>
-
-    <TextView
-        android:id="@+id/txtNFCClassRoomClock"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="簽到地點："
-        android:layout_marginBottom="10dp"
-        android:textSize="25dp"
-        android:textColor="#FFFFFF"/>
-
-    <TextView
-        android:id="@+id/txtNFCClassTimeClock"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="簽到時間："
-        android:layout_marginBottom="10dp"
-        android:textSize="25dp"
-        android:textColor="#FFFFFF"/>
-
-    <TextView
-        android:id="@+id/txtNFCAttendStatue"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="簽到狀態："
-        android:layout_marginBottom="10dp"
-        android:textSize="25dp"
-        android:textColor="#FFFFFF"/>
-
-    <View
-        android:id="@+id/view"
-        android:layout_width="800px"
-        android:layout_height="5px"
-        android:background="#143c8c"
-        android:layout_marginTop="24px" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:textSize="25dp"
-        android:textColor="#FFFFFF"
-        android:text="請感應NFC相關設備簽到!"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_weight="1">
+            <TextView
+                android:text="課程清單："
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:textSize="25dp"
+                android:textColor="#FFFFFF"/>
 
             <Button
-                android:id="@+id/btnNFCClear"
+                android:id="@+id/btnGetClassList"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="清除"
+                android:padding="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_gravity="center_horizontal"
+                android:text="取得課堂資訊"
+                android:textSize="20dp"
+                android:textColor="#FFFFFF"
+                android:background="@drawable/btn_shape2"/>
+
+            </LinearLayout>
+            <TextView
+                android:id="@+id/txtNFCClassName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="課程名稱："
+                android:layout_marginBottom="10dp"
+                android:textSize="25dp"
+                android:textColor="#FFFFFF"/>
+
+            <TextView
+                android:id="@+id/txtNFCClassRoom"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="上課地點："
+                android:layout_marginBottom="10dp"
+                android:textSize="25dp"
+                android:textColor="#FFFFFF"/>
+
+            <TextView
+                android:id="@+id/txtNFCClassTime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="上課時間："
+                android:layout_marginBottom="10dp"
+                android:textSize="25dp"
+                android:textColor="#FFFFFF"/>
+
+            <TextView
+                android:id="@+id/txtNFCClassRoomClock"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="簽到地點："
+                android:layout_marginBottom="10dp"
+                android:textSize="25dp"
+                android:textColor="#FFFFFF"/>
+
+            <TextView
+                android:id="@+id/txtNFCClassTimeClock"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="簽到時間："
+                android:layout_marginBottom="10dp"
+                android:textSize="25dp"
+                android:textColor="#FFFFFF"/>
+
+            <TextView
+                android:id="@+id/txtNFCAttendStatue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="簽到狀態："
+                android:layout_marginBottom="10dp"
+                android:textSize="25dp"
+                android:textColor="#FFFFFF"/>
+
+            <View
+                android:id="@+id/view"
+                android:layout_width="800px"
+                android:layout_height="5px"
+                android:background="#143c8c"
+                android:layout_marginTop="24px" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:textSize="25dp"
                 android:textColor="#FFFFFF"
-                android:background="@drawable/btn_shape2"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="10dp" />
-        </LinearLayout>
+                android:text="請感應NFC相關設備簽到!"/>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_weight="1">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <ToggleButton
-                android:id="@+id/tgbtnNFCTag"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:textOff="臨時標籤(關)"
-                android:textOn="臨時標籤(開)"
-                android:textSize="20dp"
-                android:layout_marginTop="10dp"
-                android:textColor="#FFFFFF"
-                android:padding="5dp"
-                android:background="@drawable/btn_shape2"/>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_weight="1">
+
+                    <Button
+                        android:id="@+id/btnNFCClear"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="清除"
+                        android:textSize="25dp"
+                        android:textColor="#FFFFFF"
+                        android:background="@drawable/btn_shape2"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="10dp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_weight="1">
+
+                <ToggleButton
+                    android:id="@+id/tgbtnNFCTag"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:textOff="臨時標籤(關)"
+                    android:textOn="臨時標籤(開)"
+                    android:textSize="20dp"
+                    android:layout_marginTop="10dp"
+                    android:textColor="#FFFFFF"
+                    android:padding="5dp"
+                    android:background="@drawable/btn_shape2"/>
+                 </LinearLayout>
+             </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+    </ScrollView>
 </LinearLayout>
