--- a/app/src/main/res/layout/activity_showattendlist_itme.xml
+++ b/app/src/main/res/layout/activity_showattendlist_itme.xml
@@ -15,7 +15,7 @@
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:text="日期"
-            android:textColor="#000000"
+            android:textColor="#FFFFFF"
             android:textSize="25dp"/>
 
     </LinearLayout>
@@ -28,7 +28,7 @@
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:text="缺曠"
-            android:textColor="#000000"
+            android:textColor="#FFFFFF"
             android:textSize="25dp"/>
 
     </LinearLayout>
