--- a/app/src/main/res/layout/activity_showclasshours_page.xml
+++ b/app/src/main/res/layout/activity_showclasshours_page.xml
@@ -36,6 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/btn_shape"/>
+
     </LinearLayout>
 
     <TextView
@@ -52,14 +53,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="目前學習時數顯示狀態：顯示全部"
+        android:text="目前學習時數顯示狀態：顯示全部(分鐘)"
         android:textColor="#ffffff"
         android:textSize="20dp"/>
 
     <ListView
         android:id="@+id/lstClassHrsList"
         android:layout_width="match_parent"
-        android:layout_height="340dp"
+        android:layout_height="290dp"
         android:divider="#143c8c"
         android:layout_marginTop="5dp"
         android:dividerHeight="1dp"
