--- a/app/src/main/res/layout/activity_mydata_page.xml
+++ b/app/src/main/res/layout/activity_mydata_page.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="@drawable/clockbg"
+    android:background="#332156"
     android:padding="10dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
