--- a/app/src/main/res/layout/activity_showattendlist_itme.xml
+++ b/app/src/main/res/layout/activity_showattendlist_itme.xml
@@ -14,7 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:text="日期"
+            android:text=""
             android:textColor="#FFFFFF"
             android:textSize="25dp"/>
 
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:text="缺曠"
+            android:text=""
             android:textColor="#FFFFFF"
             android:textSize="25dp"/>
 
