--- a/app/src/main/res/layout/activity_mydata_page.xml
+++ b/app/src/main/res/layout/activity_mydata_page.xml
@@ -16,11 +16,11 @@
         android:layout_marginBottom="100dp"
         android:background="@drawable/rollcallrecord"/>
 
-    <Button
-        android:id="@+id/btnToEditMyDataPage"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/modifydata"/>
+    <!--<Button-->
+        <!--android:id="@+id/btnToEditMyDataPage"-->
+        <!--android:layout_width="150dp"-->
+        <!--android:layout_height="150dp"-->
+        <!--android:layout_gravity="center_horizontal"-->
+        <!--android:background="@drawable/modifydata"/>-->
 
 </LinearLayout>
